# realms-vote-plugin

./: .gitignore  Anchor.toml  README.md  admin.json
programs/drift-stake-voter/: Cargo.toml
programs/drift-stake-voter/src/: error.rs  lib.rs
programs/drift-stake-voter/src/instructions/: create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_voter_weight_record.rs
programs/drift-stake-voter/src/state/: registrar.rs
programs/drift-stake-voter/src/tools/: drift_tools.rs  mod.rs
programs/drift-stake-voter/tests/: configure_governance_program.rs  configure_voter_weights.rs  create_registrar.rs  update_voter_weight_record.rs
programs/drift-stake-voter/tests/program_test/: tools.rs
tests/: drift-voter-plugin.ts
