[package]
name = "drift-stake-voter"
version = "0.0.1"
description = "SPL Governance plugin granting governance power through Drift staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_stake_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.27.0" }
anchor-spl = "0.27.0"
solana-program = "1.14.7"
spl-governance = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance-tools=  "0.1.3"
spl-governance-addin-api = "0.1.3"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "65a4386", features = ["cpi", "mainnet-beta"], default-features = false }

[dev-dependencies]
borsh = "0.9.1"
solana-sdk = "1.9.5"
solana-program-test = "1.9.13"
